Set the default suffix when selecting a mimetype

BUG:328975